--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Soy un ejemplo para la clase de TIC</p>
     <table style="border:1px solid #000000">
         <tr>
-            <td>Fila 1, C1</td>
+            <td>Fila 1, C1 modificada</td>
             <td>Fila 1, C2</td>
         </tr>
         <tr>
